Assert that public MSE API is only called from the main thread.
RESOLVED
FIXED
in mozilla34
Status
()
People
(Reporter: kinetik, Assigned: kinetik)
Tracking
(Blocks: 1 bug)
Firefox Tracking Flags
(Not tracked)
Details
Attachments
(1 attachment)
20.60 KB,
patch
|
cajbir
:
review+
|
Details | Diff | Splinter Review |
Comment hidden (empty) |
(Assignee) | ||
Updated•5 years ago
|
Assignee: nobody → kinetik
(Assignee) | ||
Comment 1•5 years ago
|
||
Created attachment 8468244 [details] [diff] [review] Assert that public MSE API is only called from the main thread.
Attachment #8468244 -
Flags: review?(cajbir.bugzilla)
Updated•5 years ago
|
Attachment #8468244 -
Flags: review?(cajbir.bugzilla) → review+
(Assignee) | ||
Comment 2•5 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/20bdca5301b0
Comment 3•5 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/20bdca5301b0
Status: NEW → RESOLVED
Last Resolved: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
(Assignee) | ||
Updated•5 years ago
|
You need to log in
before you can comment on or make changes to this bug.