Bug 1049327 - Assert that public MSE API is only called from the main thread. r=cajbir